fixed overlap

--- a/_sass/grid.scss
+++ b/_sass/grid.scss
@@ -33,7 +33,7 @@
 
     grid-template-columns: 5% auto;
     grid-template-areas:
-    "header   header"
+    "sidebar   header"
     "sidebar  content"
     "sidebar  content"
     "footer   footer";
@@ -45,7 +45,7 @@
     grid-gap: 0px;
     grid-template-columns: 120px auto 120px;
     grid-template-areas:
-    "header  header  header"
+    "sidebar  header  header"
     "sidebar content content"
     "sidebar  footer  footer";
     max-width: 90%;
@@ -57,7 +57,7 @@
 }
 
 .header {
-  position: absolute;
+  position: relative;
   top: 0;
   width: 100%;
   height: 2.5rem;
@@ -67,7 +67,7 @@
   right: 0px;
 }
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 2.5rem;
@@ -79,6 +79,6 @@
   font-size: 60%;
 }
 
-.sidebar {
-  color: $color-teal;
+.content {
+  position: relative;
 }
